<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit User"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="16dp" />

    <EditText
    android:id="@+id/etUserId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="UserID to edit" />

    <EditText
        android:id="@+id/etEditUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username" />

    <EditText
        android:id="@+id/etEditEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email" />

    <EditText
        android:id="@+id/etEditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password" />

    <EditText
        android:id="@+id/etUserRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Role" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save Changes"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnFetchUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter UserID to fetch"
        android:layout_marginTop="16dp" />
</LinearLayout>
