<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/citizenWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Citizen Home Page"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="16dp" />


    <Button
        android:id="@+id/vonunteerApplyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Apply for Volunteer" />




</LinearLayout>
