<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="CityWatcher">
    </TextView>


    <Button android:id="@+id/btnAdminView"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="Go to Admin View" />

    <Button android:id="@+id/btnCitizenView"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="Go to Citizen View" />



</androidx.appcompat.widget.LinearLayoutCompat>